--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://jfrog.elhub.cloud:443/artifactory/elhub-gradle/gradle-7.5.1-bin.zip
+distributionUrl=https\://jfrog.elhub.cloud/artifactory/elhub-gradle/gradle-7.5.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
