--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ gradle-versions = "0.41.0"
 jfrog = "4.29.0"
 kotest = "5.5.1"
 kotlin = "1.7.20"
+owasp-dependency = "7.3.0"
 shadow = "7.1.2"
 test-logger = "3.2.0"
 
@@ -22,7 +23,7 @@ jetbrains-kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotli
 test-logger-plugin = { group = "com.adarshr", name = "gradle-test-logger-plugin", version.ref = "test-logger" }
 test-kotest-runner-junit5 = { group = "io.kotest", name = "kotest-runner-junit5", version.ref = "kotest" }
 version-gradle-versions-plugin = { group = "com.github.ben-manes", name = "gradle-versions-plugin", version.ref = "gradle-versions" }
-
+owasp-dependency-check = { group = "org.owasp", name = "dependency-check-gradle", version.ref = "owasp-dependency" }
 
 [bundles]
 
