--- a/.arcconfig
+++ b/.arcconfig
@@ -1,4 +1,5 @@
 {
-    "phabricator.uri" : "https://phabricator.elhub.cloud",
-    "unit.engine": "GradleUnitTestEngine"
+    "phabricator.uri": "https://phabricator.elhub.cloud",
+    "unit.engine": "GradleUnitTestEngine",
+    "arc.land.onto": ["main"]
 }
