--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ gradle-versions = "0.44.0"
 jfrog = "4.29.0"
 kotest = "5.8.0"
 kotlin = "1.9.21"
-owasp-dependency = "9.0.0"
+owasp-dependency = "8.4.3"
 shadow = "8.0.0"
 test-logger = "3.2.0"
 
@@ -19,7 +19,7 @@ test-logger = "3.2.0"
 [libraries]
 apache-commons-io = { group = "commons-io", name = "commons-io", version.ref = "commons-io" }
 build-jfrog-build-info = { group = "org.jfrog.buildinfo", name = "build-info-extractor-gradle", version.ref = "jfrog" }
-build-shadow-plugin = { group = "gradle.plugin.com.github.johnrengelman", name = "shadow-gradle-plugin", version.ref = "shadow" }
+build-shadow-plugin = { group = "gradle.plugin.com.github.johnrengelman", name = "shadow", version.ref = "shadow" }
 docs-dokka-plugin = { group ="org.jetbrains.dokka", name ="dokka-gradle-plugin", version.ref = "dokka"}
 kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 test-logger-plugin = { group = "com.adarshr", name = "gradle-test-logger-plugin", version.ref = "test-logger" }
