--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,15 +4,15 @@
 format.version = "1.1"
 
 [versions]
-commons-io = "2.11.0"
-dokka = "1.7.20"
+commons-io = "2.17.0"
+dokka = "1.9.20"
 gradle-versions = "0.51.0"
-jfrog = "4.29.0"
-kotest = "5.8.0"
-kotlin = "1.9.24"
-owasp-dependency = "8.4.0"
+jfrog = "5.2.5"
+kotest = "5.9.1"
+kotlin = "2.0.21"
+owasp-dependency = "11.1.0"
 shadow = "8.0.0"
-test-logger = "3.2.0"
+test-logger = "4.0.0"
 
 [libraries]
 apache-commons-io = { group = "commons-io", name = "commons-io", version.ref = "commons-io" }
@@ -31,4 +31,5 @@ owasp-dependency-check = { group = "org.owasp", name = "dependency-check-gradle"
 [plugins]
 build-artifactory = { id = "com.jfrog.artifactory", version.ref = "jfrog" }
 test-logger = { id = "com.adarshr.test-logger", version.ref = "test-logger" }
+owasp-dependency-check = { id = "org.owasp.dependencycheck", version.ref = "owasp-dependency" }
 version-gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradle-versions" }
