Fix publish through artifactory plugin
## 📝 Description

* [patch] fix.

## 🔗 Issue ID(s): TDX-734

## 📋 Checklist

* ✅ Lint checks passed on local machine.
* ✅ Unit tests passed on local machine.

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,12 @@
 .markdownlint.json
 .prettierrc.json
 .pylintrc
+.secretlintrc.json
 .stylelintrc.json
 .yamllint.yml
 pyproject.toml
 revive.toml
+trivy.yaml
 
 ### Ansible ###
 **/galaxy/*
