--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,19 +5,20 @@ format.version = "1.1"
 
 [versions]
 commons-io = "2.18.0"
-dokka = "1.9.20"
-gradle-versions = "0.51.0"
+dokka = "2.0.0"
+gradle-versions = "0.52.0"
 jfrog = "5.2.5"
 kotest = "5.9.1"
-kotlin = "2.1.0"
-owasp-dependency = "11.1.1"
-shadow = "8.0.0"
+kotlin = "2.1.10"
+kotlin-dsl = "5.1.2"
+owasp-dependency = "12.0.2"
+shadow = "8.3.6"
 test-logger = "4.0.0"
 
 [libraries]
 apache-commons-io = { group = "commons-io", name = "commons-io", version.ref = "commons-io" }
 build-jfrog-build-info = { group = "org.jfrog.buildinfo", name = "build-info-extractor-gradle", version.ref = "jfrog" }
-build-shadow-plugin = { group = "gradle.plugin.com.github.johnrengelman", name = "shadow", version.ref = "shadow" }
+build-shadow-plugin = { group = "com.gradleup.shadow", name = "shadow-gradle-plugin", version.ref = "shadow" }
 docs-dokka-plugin = { group ="org.jetbrains.dokka", name ="dokka-gradle-plugin", version.ref = "dokka"}
 kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 test-logger-plugin = { group = "com.adarshr", name = "gradle-test-logger-plugin", version.ref = "test-logger" }
@@ -30,6 +31,7 @@ owasp-dependency-check = { group = "org.owasp", name = "dependency-check-gradle"
 
 [plugins]
 build-artifactory = { id = "com.jfrog.artifactory", version.ref = "jfrog" }
+kotlin-dsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlin-dsl" }
 test-logger = { id = "com.adarshr.test-logger", version.ref = "test-logger" }
 owasp-dependency-check = { id = "org.owasp.dependencycheck", version.ref = "owasp-dependency" }
 version-gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradle-versions" }
