--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://jfrog.elhub.cloud/artifactory/elhub-gradle/gradle-8.11.1-bin.zip
+distributionUrl=https\://jfrog.elhub.cloud:443/artifactory/elhub-gradle/gradle-8.12.1-bin.zip
 networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
