--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,14 +6,15 @@ format.version = "1.1"
 [versions]
 commons-io = "2.20.0"
 dokka = "2.0.0"
-gradle-versions = "0.52.0"
-jfrog = "6.0.0"
-kotest = "5.9.1"
-kotlin = "2.2.0"
-owasp-dependency = "12.1.3"
-shadow = "8.3.8"
-test-logger = "4.0.0"
 gradle-jib = "3.4.5"
+gradle-versions = "0.52.0"
+jacoco = "0.8.13"
+jfrog = "6.0.0"
+kotest = "6.0.0"
+kotlin = "2.2.10"
+owasp-dependency = "12.1.3"
+shadow = "9.0.2"
+test-logger = "4.0.0"
 
 [libraries]
 apache-commons-io = { group = "commons-io", name = "commons-io", version.ref = "commons-io" }
@@ -32,7 +33,9 @@ gradle-jib-plugin = { group = "com.google.cloud.tools", name = "jib-gradle-plugi
 
 [plugins]
 build-artifactory = { id = "com.jfrog.artifactory", version.ref = "jfrog" }
-test-logger = { id = "com.adarshr.test-logger", version.ref = "test-logger" }
-owasp-dependency-check = { id = "org.owasp.dependencycheck", version.ref = "owasp-dependency" }
-version-gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradle-versions" }
 gradle-jib = { id = "com.google.cloud.tools.jib", version.ref = "gradle-jib" }
+maven-publish = { id = "maven-publish" }
+owasp-dependency-check = { id = "org.owasp.dependencycheck", version.ref = "owasp-dependency" }
+test-jacoco = { id = "jacoco" }
+test-logger = { id = "com.adarshr.test-logger", version.ref = "test-logger" }
+version-gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradle-versions" }
