Update plugins to use Gradle 9.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 kotlin.code.style=official
 org.gradle.configuration-cache=true
-version=0.1.0-SNAPSHOT
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+version=1.0-SNAPSHOT
