Update plugins to use Gradle 9.0
## 📝 Description

* Upgrades the plugins to use Gradle 9.0.
* Updates to Dokka 2.0 as well.
* Shadow updated to 9.0.x
* Kotlin bumped to 2.2.10
* [rc] update

Propose making this a major release once it is stable.

## 📋 Checklist

* ⛔ **This PR has not been linted! The --nolint option was used.**
* ✅ Unit tests passed on local machine.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
 kotlin.code.style=official
-version=0.1.0-SNAPSHOT
+org.gradle.configuration-cache=true
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+version=1.0-SNAPSHOT
